# katas

2016-10/dan-pallas-cpp/: .gitignore  CMakeLists.txt
2016-10/dan-pallas-cpp/server/: server.cpp
2016-10/dan-pallas-cpp/shared/: librps.cpp  librps.hpp
